--- a/src/components/contactForm/ContactForm.module.css
+++ b/src/components/contactForm/ContactForm.module.css
@@ -2,8 +2,9 @@
  width: 500px;
  margin: 0 auto;
  padding: 10px;
- border: 7px solid rgb(111, 136, 247);
+ border: 7px solid white;
  border-radius: 7px;
+ background-color: rgb(131, 131, 130);
 }
 .inputContainer {
  display: flex;
@@ -32,10 +33,13 @@
 .buttonAddContact {
  margin-bottom: 20px;
  padding: 5px;
+ color: white;
+ background-color: rgb(111, 111, 250);
 }
 .buttonAddContact:hover {
  border-radius: 5px;
  cursor: pointer;
- background-color: rgb(111, 111, 250);
- color: white;
+ background-color: rgb(26, 243, 26);
+ color: black;
+ 
 }
