--- a/src/components/auth/AuthForm.module.css
+++ b/src/components/auth/AuthForm.module.css
@@ -1,10 +1,11 @@
-.mainContainer{
- width: 500px;
+.formAuth{
+    width: 500px;
  margin: 0 auto;
  padding: 10px;
- background-color: rgb(131, 131, 130);
  border: 7px solid white;
- }
+ border-radius: 7px;
+ background-color: rgb(131, 131, 130);
+}
 .inputContainer {
  display: flex;
  flex-direction: column;
@@ -13,6 +14,7 @@
 .labelName {
  display: block;
  margin-bottom: 20px;
+ padding-right: 10px;
  font-size: 25px;
  font-weight: 500;
 }
@@ -20,6 +22,7 @@
  display: block;
  max-width: 200px;
  height: 30px;
+ margin-bottom: 30px;
  padding-left: 10px;
  border-radius: 5px;
  border: 1px solid rgba(33, 33, 33, 0.2);
@@ -28,11 +31,17 @@
  outline: 4px solid #2196f3;
  cursor: pointer;
 }
-.buttonAddContact {
- margin-bottom: 20px;
-}
-.buttonAddContact:hover {
+
+
+.buttonGo {
+    margin-bottom: 20px;
+ padding: 5px;
  border-radius: 5px;
  cursor: pointer;
- background-color: rgb(79, 79, 243);
+ background-color: rgb(111, 111, 250);
+ color: white;
+}
+.buttonGo:hover{
+ background-color: rgb(26, 243, 26);
+ color: black;
 }
