--- a/src/components/contactList/ContactList.module.css
+++ b/src/components/contactList/ContactList.module.css
@@ -2,6 +2,7 @@
  width: 500px;
  margin: 0 auto;
  padding: 10px;
+
  }
  .ulContainer{
      padding: 0;
@@ -14,10 +15,12 @@
     list-style: none;
     border: 1px solid black;
     border-radius: 5px;
+    
+   background-color: rgb(111, 111, 250);
 }
 .newContactName{
     display: inline-block;
-    color:blue;
+   color: white;
     margin-right: 20px;
 }
 .btn{
